[l18n]> update pot with grunt - add description - header text + remove author url

--- a/languages/eddc.pot
+++ b/languages/eddc.pot
@@ -1,16 +1,28 @@
-# Copyright (C) 2015 Easy Digital Downloads - Commissions
+# Copyright (C) 2015 Pippin Williamson
 # This file is distributed under the same license as the Easy Digital Downloads - Commissions package.
 msgid ""
 msgstr ""
 "Project-Id-Version: Easy Digital Downloads - Commissions 3.1.2\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/EDD-Commissions\n"
-"POT-Creation-Date: 2015-03-24 15:55:31+00:00\n"
+"Report-Msgid-Bugs-To: Pippin Williamson <pippin@pippinsplugins.com>\n"
+"POT-Creation-Date: 2015-04-01 16:15:03+00:00\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: Pippin Williamson <pippin@pippinsplugins.com>\n"
+"Language-Team: Easy Digital Downloads <support@easydigitaldownloads.com>\n"
+"X-Generator: grunt-wp-i18n 0.5.1\n"
+"X-Poedit-KeywordsList: "
+"__;_e;_x:1,2c;_ex:1,2c;_n:1,2;_nx:1,2,4c;_n_noop:1,2;_nx_noop:1,2,3c;esc_"
+"attr__;esc_html__;esc_attr_e;esc_html_e;esc_attr_x:1,2c;esc_html_x:1,2c;\n"
+"Language: en_US\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Country: United States\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-Basepath: ../\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-Bookmarks: \n"
+"X-Textdomain-Support: yes\n"
 
 #: includes/EDD_C_List_Table.php:49
 msgid "View all commissions for this item"
@@ -150,8 +162,8 @@ msgstr ""
 msgid "Easy Digital Download Commissions"
 msgstr ""
 
-#: includes/admin/list.php:14 includes/post-type.php:31
-#: includes/reports.php:13 includes/reports.php:126
+#: includes/admin/list.php:14 includes/post-type.php:31 includes/reports.php:13
+#: includes/reports.php:126
 msgid "Commissions"
 msgstr ""
 
@@ -227,8 +239,8 @@ msgstr ""
 
 #: includes/admin/upgrades.php:25
 msgid ""
-"Easy Digital Downloads needs to upgrade the commission records, click %shere"
-"%s to start the upgrade."
+"Easy Digital Downloads needs to upgrade the commission records, click "
+"%shere%s to start the upgrade."
 msgstr ""
 
 #: includes/admin/widgets.php:14
@@ -382,16 +394,6 @@ msgstr ""
 msgid "EDD Commissions: Mass payments for vendors update"
 msgstr ""
 
-#: includes/post-type.php:19
-msgctxt "post type general name"
-msgid "Commissions"
-msgstr ""
-
-#: includes/post-type.php:20
-msgctxt "post type singular name"
-msgid "Commission"
-msgstr ""
-
 #: includes/post-type.php:21
 msgid "Add New"
 msgstr ""
@@ -458,8 +460,8 @@ msgstr ""
 
 #: includes/settings.php:23
 msgid ""
-"Enter the default rate recipients should receive. This can be overwritten on "
-"a per-product basis. 10 = 10%"
+"Enter the default rate recipients should receive. This can be overwritten "
+"on a per-product basis. 10 = 10%"
 msgstr ""
 
 #: includes/settings.php:29
@@ -546,8 +548,8 @@ msgstr ""
 
 #: includes/user-meta.php:12
 msgid ""
-"If the user's PayPal address is different than their account email, enter it "
-"here."
+"If the user's PayPal address is different than their account email, enter "
+"it here."
 msgstr ""
 
 #: includes/user-meta.php:16
@@ -556,8 +558,8 @@ msgstr ""
 
 #: includes/user-meta.php:19
 msgid ""
-"Enter a global commission rate for this user. If a rate is not specified for "
-"a product, this rate will be used."
+"Enter a global commission rate for this user. If a rate is not specified "
+"for a product, this rate will be used."
 msgstr ""
 
 #: includes/user-meta.php:24
@@ -565,16 +567,7 @@ msgid "PayPal Email"
 msgstr ""
 
 #: includes/user-meta.php:27
-msgid ""
-"If your PayPal address is different than your account email, enter it here."
-msgstr ""
-
-#. Plugin Name of the plugin/theme
-msgid "Easy Digital Downloads - Commissions"
-msgstr ""
-
-#. Plugin URI of the plugin/theme
-msgid "http://easydigitaldownloads.com/extension/commissions"
+msgid "If your PayPal address is different than your account email, enter it here."
 msgstr ""
 
 #. Description of the plugin/theme
@@ -583,10 +576,12 @@ msgid ""
 "sold"
 msgstr ""
 
-#. Author of the plugin/theme
-msgid "Pippin Williamson"
+#: includes/post-type.php:19
+msgctxt "post type general name"
+msgid "Commissions"
 msgstr ""
 
-#. Author URI of the plugin/theme
-msgid "http://pippinsplugins.com"
+#: includes/post-type.php:20
+msgctxt "post type singular name"
+msgid "Commission"
 msgstr ""
